# template-python-package

./: .editorconfig  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements-test.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
src/my_package/: __init__.py
tests/: test_my_package.py
