[metadata]
name = my_package
version = 0.1.0
description = A template package
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    template
    package
license = MIT
url = https://github.com/author/my-package
project_urls =
    Bug Tracker = https://github.com/author/my-package/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
